methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs:4: error: not found: value verLAvant
    verLAvant=true
    ^MethodsArgs:7: error: reassignment to val
    versLAvant=false
              ^MethodsArgs:12: error: reassignment to val
  nbPas=6-Y
       ^MethodsArgs:19: error: type mismatch;
 found   : Unit
 required: Int
    for (i<-0 to nbPas){
          ^MethodsArgs:18: error: type mismatch;
 found   : Unit
 required: Int
  if(versLAvant==false){
  ^